use thetis logo as page icon

--- a/source/_themes/firedrake/theme.conf
+++ b/source/_themes/firedrake/theme.conf
@@ -6,5 +6,5 @@ pygments_style = fenics_theme_support.FenicsStyle
 [options]
 highlight_language = guess
 short_title = Home
-logo = icon.png
-favicon = icon.ico
+logo = icon_thetis.ico
+favicon = icon_thetis.ico
